fix: add `overflow-x: hidden` to `html`

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -3,6 +3,9 @@
 @tailwind utilities;
 
 @layer base {
+  html {
+    overflow-x: hidden;
+  }
   @media print {
     :root {
       font-size: 70%;
